*) fix for missing clone on mutable array (complained by findbugs) *) less findbugs warnings
git-svn-id: svn://svn.paxle.net/paxle/trunk@2058 f5d3ab42-bacf-4b1a-9692-565be65a0cfe